--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,67 @@
-# =========================
+# ======================
 # Python
-# =========================
+# ======================
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
 
-# =========================
+# Byte-compiled / optimized
+*.so
+
+# ======================
 # Virtual Environment
-# =========================
+# ======================
 venv/
-.env/
+env/
+ENV/
 
-# =========================
+# ======================
 # Environment Variables
-# =========================
+# ======================
 .env
+.env.*
 
-# =========================
-# Storage (User Data & Vector DB)
-# =========================
-storage/
-
-# =========================
+# ======================
 # Logs
-# =========================
+# ======================
 *.log
 
-# =========================
-# VSCode / IDE
-# =========================
+# ======================
+# VSCode
+# ======================
 .vscode/
-.idea/
 
-# =========================
+# ======================
 # OS Files
-# =========================
+# ======================
 .DS_Store
 Thumbs.db
+
+# ======================
+# Build / Dist
+# ======================
+build/
+dist/
+*.egg-info/
+
+# ======================
+# Testing / Coverage
+# ======================
+.coverage
+htmlcov/
+.pytest_cache/
+
+# ======================
+# Database / Local Storage
+# ======================
+*.db
+*.sqlite3
+
+# ======================
+# RAG / AI Storage (Optional - jika ada nanti)
+# ======================
+storage/
+vector_store/
+chroma_db/
+faiss_index/
+uploads/
